fix: correctly resolve queries such as BF*
Closes https://github.com/GenSpectrum/cov-spectrum-website/issues/626